--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Json Database
+*.json
+
 # Logs
 logs
 *.log
@@ -6,7 +9,6 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
