--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+src/Database/json/Config.json
+src/Database/json/Mensagens.json
+src/Database/json/Roles.json
