--- a/src/Database/json/Config.json
+++ b/src/Database/json/Config.json
@@ -1,8 +1,1 @@
-{
-  "869669730116599839": {
-    "canais": {
-      "movchat": "869670849471451186",
-      "movcall": "869670840701186058"
-    }
-  }
-}
+{"869669730116599839":{"canais":{"movchat":"869670849471451186","movcall":"869670840701186058"}}}
